--- a/src/components/pages/NewProject.module.css
+++ b/src/components/pages/NewProject.module.css
@@ -5,7 +5,8 @@
 }
 .newproject_container h1 {
     margin-bottom: 0.5em;
+    color: #efefef;
 }
 .newproject_container p {
-    color: #7b7b7b;
+    color: #efefef;
 }
