--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -16,7 +16,7 @@
 .home_container h1 span {
     color:#00A859;
     padding: 0.2em;
-    background-color:rgb(46, 46, 46);
+    background-color:rgba(46, 46, 46, 0.335);
     
 
 }
