--- a/src/components/pages/Home.module.css
+++ b/src/components/pages/Home.module.css
@@ -22,7 +22,7 @@
 }
 .home_container p {
     margin-bottom: 1.5em;
-    color: #fff;
+    color: rgb(204, 204, 204);
 }
 .home_container img {
     width: 200px;
